<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/venue_name_layout"
                android:layout_marginTop="@dimen/info_top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/venue_name"
                    android:layout_marginLeft="@dimen/info_leftest"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/venue_name"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_alignLeft="@+id/venue_name"
                    android:layout_marginLeft="@dimen/info_left"
                    android:id="@+id/venue_name_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/placeholder"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/venue_address_layout"
                android:layout_marginTop="@dimen/info_top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/venue_address"
                    android:layout_marginLeft="@dimen/info_leftest"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/venue_address"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_alignLeft="@+id/venue_address"
                    android:layout_marginLeft="@dimen/info_left"
                    android:id="@+id/venue_address_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/placeholder"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/venue_city_layout"
                android:layout_marginTop="@dimen/info_top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/venue_city"
                    android:layout_marginLeft="@dimen/info_leftest"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/venue_city"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_alignLeft="@+id/venue_city"
                    android:layout_marginLeft="@dimen/info_left"
                    android:id="@+id/venue_city_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/placeholder"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/venue_phone_layout"
                android:layout_marginTop="@dimen/info_top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/venue_phone"
                    android:layout_marginLeft="@dimen/info_leftest"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/venue_phone"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_alignLeft="@+id/venue_phone"
                    android:layout_marginLeft="@dimen/info_left"
                    android:id="@+id/venue_phone_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/placeholder"/>

            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/venue_open_layout"
                android:layout_marginTop="@dimen/info_top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/venue_open"
                    android:layout_marginLeft="@dimen/info_leftest"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/venue_open"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_alignLeft="@+id/venue_open"
                    android:layout_marginLeft="@dimen/info_left"
                    android:id="@+id/venue_open_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/placeholder"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/venue_general_layout"
                android:layout_marginTop="@dimen/info_top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/venue_rule"
                    android:layout_marginLeft="@dimen/info_leftest"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/venue_rule"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_alignLeft="@+id/venue_rule"
                    android:layout_marginLeft="@dimen/info_left"
                    android:id="@+id/venue_rule_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/placeholder"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/venue_child_layout"
                android:layout_marginTop="@dimen/info_top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/venue_child_rule"
                    android:layout_marginLeft="@dimen/info_leftest"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/venue_child_rule"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_alignLeft="@+id/venue_child_rule"
                    android:layout_marginLeft="@dimen/info_left"
                    android:id="@+id/venue_child_rule_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/placeholder"/>

            </RelativeLayout>

            <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".VenueDetailsFragment" >

                <com.google.android.gms.maps.MapView
                    android:id="@+id/map"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/mapheight"
                    />

            </FrameLayout>

        </LinearLayout>

    </ScrollView>


</android.support.constraint.ConstraintLayout>